feat: responsive table styles for smaller screens in bootstrap overrides

--- a/assets/css/bootstrap-overrides.css
+++ b/assets/css/bootstrap-overrides.css
@@ -11859,3 +11859,23 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+@media (max-width: 992px) {
+  thead {
+    display: none;
+  }
+  tbody td,
+  tfoot td {
+    display: grid;
+    grid-template-columns: 15ch auto;
+  }
+  tbody td:first-child {
+    margin-top: 0.5rem;
+  }
+  tbody td:last-child {
+    margin-bottom: 0.5rem;
+  }
+  tbody td::before {
+    content: attr(data-cell) ": ";
+    font-weight: 600;
+  }
+}
